--- a/chronON.UserControls/TimerControl.xaml
+++ b/chronON.UserControls/TimerControl.xaml
@@ -1,9 +1,9 @@
-<UserControl x:Class="chronON_UserControls.TimerControl"
+<UserControl x:Class="chronON.UserControls.TimerControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:chronON_UserControls"
+             xmlns:local="clr-namespace:chronON.UserControls"
              mc:Ignorable="d" 
              Width="150" Height="150">
 
