fixed project arrangement

--- a/chronON.MainProgram/MainWindow.xaml
+++ b/chronON.MainProgram/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="chronON.MainWindow"
+﻿<Window x:Class="chronON.MainProgram.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:chronON"
+        xmlns:local="clr-namespace:chronON.MainProgram"
         mc:Ignorable="d"
         Title="chronON" Height="200" Width="400">
     <Grid>
