--- a/chronON.MainProgram/App.xaml
+++ b/chronON.MainProgram/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="chronON.App"
+﻿<Application x:Class="chronON.MainProgram.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:chronON"
